readable: fix navbar brand padding

--- a/readable/bootstrap.css
+++ b/readable/bootstrap.css
@@ -6098,7 +6098,11 @@ td.visible-print {
 }
 
 .navbar-nav > li > a {
-  padding-top: 17px;
+  padding-top: 19px;
+}
+
+.navbar-brand {
+  padding-top: 18px;
 }
 
 .btn-default,
