--- a/readable/bootswatch.less
+++ b/readable/bootswatch.less
@@ -15,7 +15,11 @@
 	.box-shadow(0 1px 4px rgba(0, 0, 0, 0.2));
 
 	&-nav > li > a {
-		padding-top: @navbar-padding-vertical + 4px;
+		padding-top: @navbar-padding-vertical + 6px;
+	}
+
+	&-brand {
+		padding-top: @navbar-padding-vertical + 5px;
 	}
 }
 
